<resources xmlns:https="http://schemas.android.com/apk/res-auto">
    <string name="app_name">E - Cell</string>
    <string name="access_token">accessToken</string>
    <string name="name">Name</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="forgot">Forgot Password?\u00A0</string>
    <string name="sign_in">Sign in</string>
    <string name="register">Register</string>
    <string name="to_sign_in">Sign in\u00A0</string>
    <string name="to_register">Register\u00A0</string>

    <string name="signout">Sign out</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="profile">Profile</string>
    <string name="settings">Settings</string>
    <string name="event">Events</string>
    <string name="text_esummit">ESummit</string>
    <string name="color_esummit">#2A2426</string>
    <string name="text_events">Events</string>
    <string name="color_events">#F50F46</string>
    <string name="text_bquiz">BQuiz</string>
    <string name="color_bquiz">#800064</string>
    <string name="text_spons">Sponsors</string>
    <string name="color_spons">#F39B15</string>

    <!--ESUMMIT STRINGS-->
    <string name="e_summit_19">E - SUMMIT \'19</string>
    <string name="eventdenied">This Event is not approved yet.Sorry for the inconvenience</string>

    <string name="es_intro">Entrepreneurship cell NIT Raipur consists of a bunch of self-driven folks who strive hard to convert dreamers into doers. Henceforth we
        provide a platform to budding entrepreneurs for pursuing entrepreneurship. E-Cell as an organization aims at manifesting the essence of entrepreneurship in the
        convoluting gray matters of the young force coming up. This delegation gives wings to ideas and support in the form of investments and seed funding along with mentorship
        to the budding entrepreneurs. With aspirations to produce the greatest pioneers of the century, we provide step by step support to budding entrepreneurs to take the
        startup culture in Chhattisgarh to the next level.</string>
    <string name="speakers">SPEAKERS</string>
    <string name="es_date"><![CDATA[31 Aug & 1 Sept, 2019 | NIT Raipur]]></string>
    <string name="post">Post</string>

    <!--About Us Strings-->
    <string name="aim_text">Aim</string>
    <string name="team">Team</string>
    <string name="contact_us">Contact Us</string>
    <string name="about_us_aim">For an idea to thrive and be taken toward, it needs a platform to be promoted. That’s why at E-Summit ’19 we aspire to create a mélange
        of eminent speakers who have proved themselves in diverse fields and are at the zenith of glory. E-Summit ’19 will be a platform where ideas from such innovative
        minds will not only thrive but also become the greatest revelations of the century.</string>
    <string name="vision_text">Vision</string>
    <string name="name_college">National Institute of Technology, GE Road, Raipur</string>
    <string name="mobile_number">Mobile Number</string>
    <string name="otp_verification">OTP Verification</string>
    <string name="wasnt_able_to_load">Oops! data wasn\'t able to load</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="verify_number">Verify Mobile Number</string>
    <string name="no_internet">No internet Connection.</string>

    <!--facebook-->
    <string name="facebook_app_id">2421259651476627</string>
    <string name="fb_login_protocol_scheme">fb2421259651476627</string>
    <string name="update_msg">New Update Available</string>
    <string name="change_number">Change Number</string>
    <string name="old_number">Old Number</string>
    <string name="new_number">New Number</string>

    <string name="esummit_tagline">The Genesis of Innovation</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="agreement">By clicking \'Accept\' you agree to all Terms and Conditions.</string>
    <string name="back_to_login_screen">Back To Login Screen</string>

    <string name="dir">Director</string>
    <string name="hcd">Head of Career Department</string>
    <string name="fct">Faculty Incharge</string>
    <string name="oco">Overall Coordinator</string>
    <string name="hco">Head Coordinator</string>
    <string name="mng">Manager</string>
    <string name="exc">Executive</string>
    <string name="tech">Technology</string>
    <string name="pr">PR and Marketing</string>
    <string name="doc">Documentation</string>
    <string name="design">Design</string>


    <string name="app_access_token">eyJhbGciOiJIUzI1NiIsInR5cCI6IkpXVCJ9.eyJjbGllbnQiOiJhbmRyb2lkIiwib3JnYW5pemF0aW9uIjoiRUNlbGwifQ.H2aaDJuOxK44D2kwRCWwv9s5rzJGCNYKT3thtQqN-hQ</string>
    <string name="resend_otp">Resend OTP?</string>

    <!--About Us-->
    <string name="about_es_19">About E Summit \'19</string>
    <string name="about_us_contact">09406220952</string>
    <string name="about_us_website">ecell@nitrr.ac.in</string>

    <!--ESummit Dates-->
    <string name="startDate">2019\-08\-31</string>
    <string name="endDate">2019\-09\-01</string>

    <string name="user_unregister">UNREGISTER</string>
    <string name="user_register">REGISTER</string>

    <string name="proceed">PROCEED</string>
    <string name="leaderboard">LeaderBoard</string>
    <string name="placeholder">MCQ. Quick Answer, more points.</string>
    <string name="business_quiz">BUSINESS QUIZ</string>

    <!-- Error Codes. -->
    <string name="error_last_name">Last Name should not contain digits or empty field.</string>
    <string name="error_email">Invalid Email Address.</string>
    <string name="error_first_name">First Name should not contain digits or empty field.</string>
    <string name="error_common">Required Field.</string>
    <string name="error_pass">Password\'s length should at least be eight.</string>
    <string name="error_mobile">Enter a valid mobile number.</string>

    <string name="agree_terms_privacy">By continuing, you agree to our &lt;a href=https://ecell.nitrr.ac.in/terms>Terms and Conditions&lt;/a> and &lt;a href=https://ecell.nitrr.ac.in/policy>Privacy Policy&lt;/a></string>
    <string name="prev_sponsors">Previous Sponsors</string>
    <string name="read_more"><![CDATA[<a href=https://ecell.nitrr.ac.in/terms>Click here for further details…</a>]]></string>
    <string name="visit_website"><a>Visit Website</a></string>

    <!--Event Data-->

</resources>
