<?xml version="1.0" encoding="utf-8"?>
<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    app:layout_behavior="android.support.design.widget.BottomSheetBehaviour"
    android:id="@+id/bottom_sheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    style="@style/BaseBottomSheetDialog"
    app:behavior_hideable="true"
    app:behavior_peekHeight="80dp"
    android:padding="15dp">

    <LinearLayout
        android:background="@color/transparent"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="true"
            android:focusable="false"
            android:orientation="horizontal"
            android:layout_margin="4dp">

            <ImageView
                android:contentDescription="@string/profile"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_username"
                android:layout_weight="1"
                android:paddingTop="8dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/name"
                android:textSize="27sp"
                android:layout_weight="20"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:clickable="false"
            android:focusable="true"
            android:orientation="horizontal"
            android:layout_margin="4dp">
            <ImageView
                android:contentDescription="@string/email"
                android:layout_width="30dp"
                android:layout_height="30dp"
                android:src="@drawable/ic_email"
                android:layout_weight="1"
                android:paddingTop="8dp"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/email"
                    android:textSize="27sp"
                    android:textStyle="italic"
                    android:layout_weight="20"
                    android:layout_marginStart="10dp"/>
        </LinearLayout>

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="2dp"
            android:alpha="0.5"
            android:background="@color/colorLightBlack"
            android:layout_margin="2dp"/>

        <LinearLayout
            android:id="@+id/about_us"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="4dp">

            <ImageView
                android:contentDescription="@string/about_us"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:src="@drawable/ic_call"
                android:layout_weight="1"
                android:paddingTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/about_us"
                android:textSize="27sp"
                android:clickable="true"
                android:focusable="true"
                android:layout_weight="20"
                android:layout_marginStart="10dp"/>

        </LinearLayout>

        <LinearLayout
            android:id="@+id/sign_out"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:clickable="true"
            android:focusable="true"
            android:layout_margin="4dp">

            <ImageView
                android:contentDescription="@string/log_out"
                android:layout_width="33dp"
                android:layout_height="33dp"
                android:src="@drawable/ic_log_out"
                android:layout_weight="1"
                android:paddingTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/log_out"
                android:textSize="27sp"
                android:clickable="true"
                android:focusable="true"
                android:layout_weight="20"
                android:layout_marginStart="10dp"/>

        </LinearLayout>



    </LinearLayout>

</android.support.design.widget.CoordinatorLayout>