<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/goal_fragment"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".fragments.about_us.Aim">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/aim_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/aim_text"
                android:textColor="@color/colorWhite"
                android:textSize="50sp"
                android:padding="20dp"
                android:textStyle="bold"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/aim_detail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us_aim"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/aim_text"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/vision_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/vision_text"
                android:textColor="@color/colorWhite"
                android:textSize="50sp"
                android:padding="20dp"
                android:textStyle="bold"
                android:textAlignment="textEnd"
                app:layout_constraintTop_toBottomOf="@id/aim_detail"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/about_us_aim"
                android:textColor="@color/colorWhite"
                android:textSize="22sp"
                android:padding="10dp"
                app:layout_constraintTop_toBottomOf="@id/vision_text"
                app:layout_constraintStart_toStartOf="parent" />
        </LinearLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>