<?xml version="1.0" encoding="utf-8"?>
<androidx.cardview.widget.CardView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:layout_margin="16dp"
    app:cardElevation="8dp"
    android:paddingStart="24dp"
    android:paddingEnd="24dp"
    app:cardBackgroundColor="#2F2F2F"
    app:cardCornerRadius="16dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="16dp"
        android:layout_margin="4dp"
        android:layout_marginBottom="16dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:paddingStart="16dp"
            android:paddingEnd="16dp">

            <TextView
                android:id="@+id/username"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/name"
                android:padding="2dp"
                android:layout_marginStart="30dp"
                android:textColor="@color/colorWhite"
                android:textSize="32sp" />

        </LinearLayout>

        <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="2dp"-->
            <!--android:layout_marginStart="24dp"-->
            <!--android:layout_marginEnd="24dp"-->
            <!--android:layout_marginTop="8dp"-->
            <!--android:layout_marginBottom="4dp"-->
            <!--android:background="#AFAFAF"/>-->

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_margin="5dp">
        <LinearLayout
            android:id="@+id/item2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/verify_otp"
                android:padding="2dp"
                android:layout_marginStart="40dp"
                android:textColor="@color/colorLightBlack"
                android:textSize="20sp" />

        </LinearLayout>
        </androidx.cardview.widget.CardView>

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_margin="5dp">
        <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:background="#AFAFAF"-->
            <!--android:layout_marginStart="20dp"-->
            <!--android:layout_marginEnd="20dp"/>-->

        <LinearLayout
            android:id="@+id/item3"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:clickable="true"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/about_us"
                android:layout_marginStart="40dp"
                android:padding="2dp"
                android:textColor="@color/colorLightBlack"
                android:textSize="20sp"/>
        </LinearLayout>
        </androidx.cardview.widget.CardView>

        <!--<ImageView-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="1dp"-->
            <!--android:background="#AFAFAF"-->
            <!--android:layout_marginStart="20dp"-->
            <!--android:layout_marginEnd="20dp"/>-->

        <androidx.cardview.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:cardCornerRadius="20dp"
            android:layout_margin="5dp">
        <LinearLayout
            android:id="@+id/item4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_margin="5dp"
            android:focusable="true"
            android:background="?attr/selectableItemBackground">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:text="@string/log_out"
                android:layout_marginStart="40dp"
                android:padding="2dp"
                android:textColor="@color/colorLightBlack"
                android:textSize="20sp" />
        </LinearLayout>
        </androidx.cardview.widget.CardView>
    </LinearLayout>
</androidx.cardview.widget.CardView>